yamls/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
     metadata:
       labels:
         app: frontend
     spec:
        containers:
        - name: frontend
          image: mahadevanprotech/frontend
          ports:
          - containerPort: 80
        imagePullSecrets:
        - name: my-registry-key
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
  type: NodePort
